opengl window working in gui

--- a/openTK_windowTest/imgui.ini
+++ b/openTK_windowTest/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,31
-Size=800,569
+Size=3840,2066
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,20 +9,48 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=706,581
-Size=720,525
-Collapsed=0
-
-[Window][Game]
-Pos=709,201
-Size=1250,973
+Pos=60,60
+Size=195,366
 Collapsed=0
 
 [Window][Log]
-Pos=79,106
-Size=604,1029
+Pos=1219,1894
+Size=2108,203
 Collapsed=0
+DockId=0x00000002,0
+
+[Window][Demo]
+Pos=3329,31
+Size=511,2066
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Values]
+Pos=1219,31
+Size=2108,192
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Dear ImGui Demo]
+Pos=0,31
+Size=1217,2066
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][OCCT]
+Pos=1219,225
+Size=2108,1667
+Collapsed=0
+DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,31 Size=800,569 CentralNode=1
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,31 Size=3840,2066 Split=X Selected=0x0CA1A941
+  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=3327,2066 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=1217,2066 Selected=0xE87781F4
+    DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=2108,2066 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=3840,192 Selected=0x6B459D54
+      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=3840,1872 Split=Y
+        DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=3840,1667 CentralNode=1 Selected=0x0CA1A941
+        DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=3840,203 Selected=0x64F50EE5
+  DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=511,2066 Selected=0x16F15460
 
